--- a/pair.html
+++ b/pair.html
@@ -32,7 +32,7 @@
       padding: 20px;
       position: relative;
       text-align: center;
-      background-color: #35fa00; /* Update background color */
+      background-color: #cd1fbb; /* Update background color */
       border-radius: 10px;
       transform: perspective(1000px) rotateY(0deg);
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
